<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.bluetooth_transmission.UnvarnishedTransmissionActivity">

	<EditText
		android:id="@+id/text3"
		android:layout_width="75dp"
		android:layout_height="40dp"
		android:layout_alignBaseline="@+id/tmp_tip"
		android:layout_alignBottom="@+id/tmp_tip"
		android:layout_alignStart="@+id/textView2"
		android:inputType="numberSigned|numberDecimal"
		android:text="0.000"
		android:textAlignment="center"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="75dp"
		android:layout_height="25dp"
		android:layout_alignBottom="@+id/scrollView2"
		android:layout_alignStart="@+id/text2"
		android:layout_marginBottom="11dp"
		android:text="Slope"
		android:textAlignment="center"
		android:textStyle="bold" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		android:id="@+id/youmi_tip"
		android:text="@string/impedance"
		android:textSize="14sp"
		android:layout_marginTop="0dp"
		android:layout_height="wrap_content" />

	<ScrollView
		android:id="@+id/scrollView2"
		android:layout_width="200dp"
		android:layout_height="135dp"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/youmi_tip"
		android:background="@drawable/layout_biankuang_gray">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/tv_text_ovl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="16sp" />

		</LinearLayout>
	</ScrollView>

	<TextView
		android:layout_width="wrap_content"
		android:id="@+id/tmp_tip"
		android:text="@string/temperature"
		android:layout_below="@+id/scrollView2"
		android:textSize="14sp"
		android:layout_marginTop="4dp"
		android:layout_height="wrap_content" />

	<ScrollView
		android:id="@+id/scrollView3"
		android:layout_width="200dp"
		android:layout_height="135dp"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/tmp_tip"
		android:background="@drawable/layout_biankuang_gray">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/tv_text_tmp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="16sp" />

		</LinearLayout>
	</ScrollView>

	<Button
		android:text="@string/clear_all"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btn_clear_all"
		android:layout_marginTop="4dp"
		android:textSize="12sp"
		android:layout_marginRight="4dp"
		android:layout_below="@+id/scrollView3"
		android:layout_toLeftOf="@+id/btn_clear_last"
		/>

	<Button
		android:text="@string/clear_current"
		android:layout_marginTop="4dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btn_clear_last"
		android:layout_marginRight="4dp"
		android:textSize="12sp"
		android:layout_below="@+id/scrollView3"
		android:layout_toLeftOf="@+id/btn_scan"/>
	<Button
		android:text="@string/send"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/btn_scan"
		android:textSize="12sp"
		android:enabled="false"
		android:layout_marginTop="4dp"
		android:layout_below="@+id/scrollView3"
		android:layout_alignParentEnd="true"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="4dp"
		android:id="@+id/send_ly"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/btn_scan"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/time_interval"
			android:textSize="12sp"
			android:layout_gravity="center_vertical"
			/>
		<EditText
			android:layout_width="75dp"
			android:layout_height="wrap_content"
			android:id="@+id/time"
			android:hint=">100(ms)"
			android:textSize="12sp"
			android:inputType="number"
			android:layout_gravity="center_vertical"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/autosend_time"
			android:textSize="12sp"
			android:layout_gravity="center_vertical"
			/>
		<EditText
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:id="@+id/number"
			android:hint="5"
			android:textSize="12sp"
			android:inputType="number"
			android:layout_gravity="center_vertical"
			/>
		<Button
			android:text="@string/autosend"
			android:id="@+id/btn_send_ist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="12sp"
			android:enabled="false"
			android:layout_marginTop="4dp"
			/>
	</LinearLayout>


	<LinearLayout
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_below="@+id/send_ly"
		android:layout_marginTop="4dp"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/test_condition"
			android:layout_above="@+id/other_txt"
			android:textSize="12sp"
			android:layout_gravity="center_vertical"
			android:layout_alignParentStart="true"
			/>
		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/other_txt"
			android:layout_marginLeft="16dp"
			android:textSize="12sp"
			android:layout_gravity="center_vertical"
			/>
	</LinearLayout>

	<Button
		android:id="@+id/btn_save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/btn_clear_last"
		android:layout_alignParentEnd="true"
		android:text="@string/save" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="75dp"
		android:layout_height="25dp"
		android:layout_below="@+id/youmi_tip"
		android:layout_marginStart="32dp"
		android:layout_toEndOf="@+id/scrollView2"
		android:text="Intercept"
		android:textStyle="bold" />

	<EditText
		android:id="@+id/text2"
		android:layout_width="75dp"
		android:layout_height="40dp"
		android:layout_alignStart="@+id/textView"
		android:layout_below="@+id/textView"
		android:inputType="numberSigned|numberDecimal"
		android:text="0.000"
		android:textAlignment="center"
		android:textStyle="bold" />
</RelativeLayout>

